--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,6 +7,7 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=false
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 browser.autorefresh.Chrome.INTEGRATED=true
